Fixing carousel on mobile

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1081,8 +1081,10 @@ body.loading {
   .about__text {
     padding: 1.5rem 0 .75rem; }
 
+.section--services {
+  overflow: hidden; }
+
 .services {
-  overflow: hidden;
   display: flex;
   justify-content: center;
   padding: 4rem 0 0;
@@ -1106,7 +1108,6 @@ body.loading {
   flex-wrap: wrap;
   justify-content: center;
   opacity: .5;
-  transform: scale(0.85);
   transition: all .3s; }
   @media only screen and (min-width: 56.25em) {
     .service {
@@ -1174,6 +1175,7 @@ body.loading {
   .carousel__image {
     flex: 0 0 100%;
     display: flex;
+    justify-content: center;
     padding: 2rem 1rem;
     position: relative; }
     @media only screen and (min-width: 56.25em) {
@@ -1184,7 +1186,7 @@ body.loading {
         padding: 0 5% 0 0; } }
     .carousel__image::after {
       content: "";
-      width: 40%;
+      width: 20%;
       height: 0;
       position: absolute;
       bottom: -5px;
